created a vote and views count

--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
   <title>Document</title>
 </head>
 <body>
-  <header>
-  </header>
-  <main>
-    <!-- display three images -->
-    <div id="img-container">
-      <img id="img-one" src="" alt="">
-      <img id="img-two" src="" alt="">
-      <img id="img-three" src="" alt="">
-    </div>
-    <!-- display results -->
-    <article>
+  <main class="grid-container">
+    <!-- header -->
+    <div class="grid-item-1"></div>
+    <!-- display results/sidebar -->
+    <div class="grid-item-2">
       <div id="show-results-btn">Show Results</div>
       <ul id="results-list"></ul>
-    </article>
+    </div>
+    <!-- display three images -->
+    <div id="img-container" class="grid-item-3">
+      <img id="img-one" class="image" src="" alt="">
+      <img id="img-two" class="image" src="" alt="">
+      <img id="img-three" class="image" src="" alt="">
+    </div>
+    <div class="grid-item-4">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam aut provident fugiat a illum dicta? Consequatur, ratione! Fugiat, dolorum nulla inventore ratione, enim architecto iste mollitia veniam dolore, officia tempore.
+      Necessitatibus impedit consectetur placeat iste. Accusantium nostrum illo ullam molestias et excepturi officia perferendis adipisci voluptate veniam aspernatur eum deleniti quaerat, earum qui ipsa beatae animi porro corrupti non? Magni.</p>
+    </div>
+    <footer class="grid-item-5">
+    </footer>
   </main>
   
   <script src="app.js"></script>
