--- a/index.html
+++ b/index.html
@@ -9,28 +9,32 @@
   <title>Bus Mall</title>
 </head>
 <body>
-  <main class="grid-container">
+  <main>
     <!-- header -->
-    <div class="grid-item-1"></div>
+    <header>
+      <nav></nav>
+    </header>
     <!-- display results/sidebar -->
-    <div class="grid-item-2">
-      <div id="show-results-btn">Show Results</div>
-      <ul id="results-list"></ul>
-    </div>
-    <!-- display three images -->
-    <div id="img-container" class="grid-item-3">
+    <section class="vote-container">
+      <!-- display three images -->
+    <h2 class="vote-title">ITEM VOTE</h2>
+    <section id="img-container">
       <img id="img-one" class="image" src="" alt="">
       <img id="img-two" class="image" src="" alt="">
       <img id="img-three" class="image" src="" alt="">
+    </section>
+    <div class="results">
+      <div id="show-results-btn">GET RESULTS</div>
+      <ul id="results-list"></ul>
     </div>
-    <div class="grid-item-4">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam aut provident fugiat a illum dicta? Consequatur, ratione! Fugiat, dolorum nulla inventore ratione, enim architecto iste mollitia veniam dolore, officia tempore.
-      Necessitatibus impedit consectetur placeat iste. Accusantium nostrum illo ullam molestias et excepturi officia perferendis adipisci voluptate veniam aspernatur eum deleniti quaerat, earum qui ipsa beatae animi porro corrupti non? Magni.</p>
-    </div>
-    <footer class="grid-item-5">
-    </footer>
   </main>
-  
-  <script src="app.js"></script>
+   <!-- Results Chart -->
+    <canvas id="myChart" width="400px" height="auto"></canvas>
+  <!-- footer -->
+  <footer>
+    <p></p>
+  </footer>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
